modules/opa/manifests/unpriviledged.tpl.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredunprivileged
  namespace: opa
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredUnprivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredunprivileged

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Privileged containers are not allowed. Container: %v", [container.name])
        }
        violation[{"msg": msg}] {
          initContainer := input.review.object.spec.initContainers[_]
          initContainer.securityContext.privileged == true
          msg := sprintf("Privileged initContainers are not allowed. InitContainer: %v", [initContainer.name])
        }
